chore: update pom